force-app/main/default/objects/RollbarSettings__c/RollbarSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>RollbarSettings</label>
</CustomObject>