force-app/main/default/objects/RollbarSettings__c/fields/AccessToken__c.field-meta.xml
<CustomField>
    <fullName>AccessToken__c</fullName>
    <label>Access Token</label>
    <length>33</length>
    <type>Text</type>
</CustomField>