force-app/main/default/objects/RollbarSettings__c/fields/CaptureEmail__c.field-meta.xml
<CustomField>
    <fullName>CaptureEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture User Email Address</label>
    <type>Checkbox</type>
</CustomField>