force-app/main/default/objects/RollbarSettings__c/fields/CaptureUserId__c.field-meta.xml
<CustomField>
    <fullName>CaptureUserId__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Capture User ID</label>
    <type>Checkbox</type>
</CustomField>