force-app/main/default/objects/RollbarSettings__c/fields/CaptureUsername__c.field-meta.xml
<CustomField>
    <fullName>CaptureUsername__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Username</label>
    <type>Checkbox</type>
</CustomField>