force-app/main/default/objects/RollbarSettings__c/fields/EmailServiceEnabled__c.field-meta.xml
<CustomField>
    <fullName>EmailServiceEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Service Enabled</label>
    <type>Checkbox</type>
</CustomField>