force-app/main/default/objects/RollbarSettings__c/fields/Initialized__c.field-meta.xml
<CustomField>
    <fullName>Initialized__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initialized</label>
    <type>Checkbox</type>
</CustomField>