force-app/main/default/objects/RollbarSettings__c/fields/NotificationForwardingEnabled__c.field-meta.xml
<CustomField>
    <fullName>NotificationForwardingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Forwarding Enabled</label>
    <type>Checkbox</type>
</CustomField>