force-app/main/default/objects/RollbarSettings__c/fields/PreparedForUninstall__c.field-meta.xml
<CustomField>
    <fullName>PreparedForUninstall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepared For Uninstall</label>
    <type>Checkbox</type>
</CustomField>