force-app/main/default/objects/RollbarSettings__c/fields/ReportFlowErrors__c.field-meta.xml
<CustomField>
    <fullName>ReportFlowErrors__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Report Flow Errors</label>
    <type>Checkbox</type>
</CustomField>