force-app/main/default/objects/RollbarSettings__c/fields/ReportUncaughtExceptions__c.field-meta.xml
<CustomField>
    <fullName>ReportUncaughtExceptions__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Report Uncaught Exceptions</label>
    <type>Checkbox</type>
</CustomField>