force-app/main/default/objects/RollbarSettings__c/fields/ReportUnknownEmailType__c.field-meta.xml
<CustomField>
    <fullName>ReportUnknownEmailType__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Report Unknown Error Emails</label>
    <type>Checkbox</type>
</CustomField>