force-app/main/default/objects/RollbarSettings__c/fields/RollbarApiEnabled__c.field-meta.xml
<CustomField>
    <fullName>RollbarApiEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollbar API Enabled</label>
    <type>Checkbox</type>
</CustomField>