force-app/main/default/objects/RollbarSettings__c/fields/RollbarNetworkAccess__c.field-meta.xml
<CustomField>
    <fullName>RollbarNetworkAccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rollbar Network Access</label>
    <type>Checkbox</type>
</CustomField>