force-app/main/default/objects/RollbarSettings__c/fields/SalesforceApiEnabled__c.field-meta.xml
<CustomField>
    <fullName>SalesforceApiEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Salesforce API Enabled</label>
    <type>Checkbox</type>
</CustomField>