force-app/main/default/objects/RollbarSettings__c/fields/SendReports__c.field-meta.xml
<CustomField>
    <fullName>SendReports__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send Reports</label>
    <type>Checkbox</type>
</CustomField>