force-app/main/default/objects/RollbarSettings__c/fields/TokenValid__c.field-meta.xml
<CustomField>
    <fullName>TokenValid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Token Valid</label>
    <type>Checkbox</type>
</CustomField>